# BrainMetScan

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py  run_server.py
configs/: config_large_lesion_96patch.yaml  config_medium_lesion.yaml  config_tiny_lesion.yaml  config_tiny_lesion_16patch.yaml  config_tiny_lesion_24patch.yaml  models.yaml  rag.yaml  training_strategy.yaml
data/: metadata.csv
demo/: api_client.py  app.py  demo_cases.py  legacy_ensemble.py
docs/: BrainMetScan_improvements.md  COMMERCIALIZATION_GOALS.md  JOCOR_IMPLEMENTATION_GUIDE.md  PROGRESS_UPDATE_20260122.md  PROGRESS_UPDATE_20260224.md  atlas_experiment_postmortem.md  external_validation_report.md  intended_use.md  risk_analysis.md
model/: ensemble_state.json  exp1_8patch_state.json  exp2_16patch_aggressive_state.json  exp3_12patch_maxfn_state.json  exp4_24patch_heavy_state.json  exp5_36patch_balanced_state.json  finetune_comparison_results.json  improved_12patch_state.json  improved_24patch_state.json  improved_36patch_state.json  improved_48patch_state.json  improved_64patch_state.json  leaderboard.json  metrics.json  stacking_results.json  stacking_v2_results.json  stacking_v3_results.json  stacking_v3b_2model_per_case.json  stacking_v3b_2model_results.json  stacking_v3b_4model_per_case.json  tiny_lesion_16patch_state.json  tiny_lesion_24patch_state.json  tiny_lesion_48patch_state.json  training_results.json  training_state.json
notebooks/: finetune_ensemble_colab.ipynb  pretrain_ensemble_colab.ipynb  train_16patch_colab.ipynb  train_stacking_classifier_colab.ipynb
scripts/: benchmark_gpu.py  benchmark_remaining.py  build_superset.py  compare_models.py  confusion_matrix.py  convert_to_numpy.py  create_missing_zip.py  ensemble_5fold.py  evaluate_model.py  finetune_pretrained.py  launch_parallel_training.py  nnunet_probs.py  optimize_threshold.py  overnight_experiments.py  package_for_colab.py  (+36 more)
(+113 files in other folders)
